fixing title/date spacing on blog

--- a/css/sass/site/_base.scss
+++ b/css/sass/site/_base.scss
@@ -40,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1, .h1 { line-height:.9em; }
-h2, .h2 { font-size:1.5em; padding-bottom:$space*.5; line-height:1em; }
+h2, .h2 { font-size:1.5em; line-height:1em; }
 p { 
   margin:0; padding:0 0 $space; 
   color:#202020;
