--- a/css/style.css
+++ b/css/style.css
@@ -455,7 +455,6 @@ h1, .h1 {
 
 h2, .h2 {
   font-size: 1.5em;
-  padding-bottom: 0.5em;
   line-height: 1em; }
 
 p {
